--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+#caja{
+  margin-top: 10px;
+  width: 200px;
+  height: 200px;
+  border: 5px solid black;
+  background-color: yellow;
+}
